--- a/onitu/facet/static/partials/file_details.html
+++ b/onitu/facet/static/partials/file_details.html
@@ -2,22 +2,8 @@
     <h3>File details</h3>
 
     <div class="row-fluid">
-        <div class="col-md-4">
-            <div class="row-fluid">
-                <h4>Preview</h4>
-            </div>
-
-            <div class="row-fluid">
-                <!-- <img class="img-responsive img-thumbnail" ng-src="{{trustedFilePath}}"> -->
-                <span class="fa-stack fa-lg">
-                    <i class="fa fa-camera fa-stack-1x"></i>
-                    <i class="fa fa-ban fa-stack-2x text-danger"></i>
-                </span>
-                No preview available
-            </div>
-        </div>
-
-        <div class="col-md-8">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
             <div class="row-fluid">
                 <h4>Information</h4>
             </div>
@@ -41,18 +27,18 @@
                         </tr>
 
                         <tr>
-                            <td><b>owners</b></td>
-                            <td><i class="fa" ng-class="driverNameToAwesomeClass(owner)" ng-repeat="owner in file.owners" title="{{owner}}"></i></td>
-                        </tr>
-
-                        <tr>
                             <td><b>synchronized</b></td>
-                            <td><i class="fa" ng-class="driverNameToAwesomeClass(owner)" ng-repeat="owner in file.uptodate" title="{{owner}}"></i></td>
+                            <td>
+                                <span ng-repeat="service in file.uptodate">
+                                    <i class="fa" ng-class="driverNameToAwesomeClass(service)"  title="{{service}}"></i>
+                                    {{service}}
+                                </span>
+                            </td>
                         </tr>
 
                         <tr>
                             <td><b>download</b></td>
-                            <td><button class="btn btn-sm btn-default">save…</button></td>
+                            <td><a class="btn btn-sm btn-primary" href="/api/v1.0/files/{{file.fid}}/content" target="_self"><i class="fa fa-download"></i> Download</a></td>
                         </tr>
                     </tbody>
                 </table>
