--- a/onitu/facet/static/partials/files_list.html
+++ b/onitu/facet/static/partials/files_list.html
@@ -1,33 +1,6 @@
-<div class="row-fluid">
-    <table id="files-list" class="table table-striped table-condensed">
-        <thead>
-            <tr>
-                <th>filename</th>
-                <th>type</th>
-                <th>size</th>
-                <th>synchronized</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr ng-repeat="file in files.orphans" ng-click="displayFile(file)">
-                    <td>{{file.filename}}</td>
-                <td><i class="fa" ng-class="fileTypeToAwesomeClass(file.type)" title="{{file.type}}"></i></td>
-                <td>{{file.size | fileSize}}</td>
-                <td>
-                    <span ng-repeat="service in file.uptodate">
-                        <i class="fa" ng-class="driverNameToAwesomeClass(service)"  title="{{service}}"></i>
-                        {{service}}
-                    </span>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-
-<div class="row-fluid" ng-repeat="(folder_name, files) in files.by_dir">
+<div class="row-fluid" ng-repeat="(folder, files) in files">
     <div class="row-fluid row-folder-name">
-        <i class="fa fa-folder fa-fw"></i>&nbsp;<span class="folder-name">{{folder_name}}</span>
+        <i class="fa fa-folder fa-fw"></i>&nbsp;<span class="folder-name">{{folder}}</span>
     </div>
 
     <div class="row-fluid">
@@ -42,9 +15,9 @@
             </thead>
 
             <tbody>
-                <tr ng-repeat="file in files" ng-click="displayFile(file)">
-                    <td>{{file.filename}}</td>
-                    <td><i class="fa" ng-class="fileTypeToAwesomeClass(file.type)" title="{{file.type}}"></i></td>
+                <tr ng-repeat="file in files">
+                    <td class="filename" ng-click="displayFile(file)">{{file.filename}}</td>
+                    <td class="type"><i class="fa" ng-class="fileTypeToAwesomeClass(file.type)" title="{{file.type}}"></i></td>
                     <td>{{file.size | fileSize}}</td>
                     <!-- FIXME: tooltips -->
                     <td>
@@ -53,6 +26,7 @@
                             {{service}}
                         </span>
                     </td>
+                    <td><a href="/api/v1.0/files/{{file.fid}}/content" target="_self"><i class="fa fa-download"></i></a></td>
                 </tr>
             </tbody>
         </table>
